--- a/BepInEx/config/com.bkeyes93.PlantingPlus.cfg
+++ b/BepInEx/config/com.bkeyes93.PlantingPlus.cfg
@@ -21,7 +21,7 @@ EnableOtherResources = true
 ## Pickable resources will spawn empty rather than full
 # Setting type: Boolean
 # Default value: false
-ResourcesSpawnEmpty = false
+ResourcesSpawnEmpty = true
 
 ## Pickable resources can only be planted on cultivated ground
 # Setting type: Boolean
@@ -41,17 +41,17 @@ EnforceBiomes = false
 ## User berry icons in the cultivator menu rather than the default ones
 # Setting type: Boolean
 # Default value: false
-AlternateIcons = false
+AlternateIcons = true
 
 ## Enable custom respawn times for pickable resources
 # Setting type: Boolean
 # Default value: true
-EnableCustomRespawnTimes = true
+EnableCustomRespawnTimes = false
 
 ## Enable custom resource amounts for pickable resources
 # Setting type: Boolean
 # Default value: true
-EnableCustomResourceAmounts = true
+EnableCustomResourceAmounts = false
 
 ## Number of raspberries required to place a raspberry bush
 # Setting type: Int32
