--- a/BepInEx/config/flueno.SmartContainers.cfg
+++ b/BepInEx/config/flueno.SmartContainers.cfg
@@ -21,7 +21,7 @@ onlyStackableItems = true
 ## Enables hud message indicating that item was routed & placed to some other chest
 # Setting type: Boolean
 # Default value: true
-hudMessageEnabled = true
+hudMessageEnabled = false
 
 ## HUD message consists of Icon, item-name plus this text.
 # Setting type: String
@@ -53,7 +53,7 @@ effectFeedbackEnabled = true
 # Setting type: ConcurrentChestModificationWorkaround
 # Default value: ExcludeContainersOpenedByOthers
 # Acceptable values: None, ExcludeContainersOpenedByOthers, BlockIfOtherContainersAreOpened
-concurrentChestModificationWorkaround = ExcludeContainersOpenedByOthers
+concurrentChestModificationWorkaround = BlockIfOtherContainersAreOpened
 
 [Grouping]
 
@@ -80,7 +80,7 @@ groupingKeyModifier = LeftControl + LeftShift
 ## Adds to the chest UI button [☼] which creates items-group based on the current items set in the chest.
 # Setting type: Boolean
 # Default value: true
-createGroupBtnEnabled = true
+createGroupBtnEnabled = false
 
 ## Adjusts btn position on inventory ui. →x:1.5..-10 ↓y:0.4..10.7  bottom-left: (1.5f, 10.7f) top-right:(-10f, 0.4f) bottom-right:(-10f, 10.7f)
 # Setting type: Vector2
