Configs em SmartContainers

--- a/BepInEx/config/flueno.SmartContainers.cfg
+++ b/BepInEx/config/flueno.SmartContainers.cfg
@@ -32,7 +32,7 @@ hudMessageText = Colocado em outro baú
 # Setting type: Int32
 # Default value: 14
 # Acceptable value range: From 5 to 99
-range = 30
+range = 50
 
 ## Change only if you wish to have even longer than ctrl+click combination (holding ctrl is mandatory since it's a 'move-stack' ingame key)
 # Setting type: KeyboardShortcut
@@ -186,7 +186,7 @@ itemsSkipList =
 ## List of items group-ids from [ItemGroup] config section allowed to be 'unloaded'
 # Setting type: String
 # Default value: valuables,ore,wood,mushrooms
-groupsList = valuables,ore,wood,mushrooms
+groupsList = valuables,ore,wood,mushrooms,berries
 
 # Setting type: String
 # Default value: trophy
