--- a/BepInEx/config/net.mtnewton.craftingstationrange.cfg
+++ b/BepInEx/config/net.mtnewton.craftingstationrange.cfg
@@ -23,5 +23,8 @@ $piece_stonecutter = 0
 # Default value: 0
 $piece_artisanstation = 0
 
+## This crafting stations range.
+# Setting type: Single
+# Default value: 0
 $piece_cauldron = 0
 
