--- a/BepInEx/config/KZ.CreatureSense.cfg
+++ b/BepInEx/config/KZ.CreatureSense.cfg
@@ -6,12 +6,12 @@
 ## How far you can see an enemy's health bar by default. The built-in value in the game is 30 meters. Keep in mind that a very large value will not allow you to see enemies unloaded from the game due to distance.
 # Setting type: Single
 # Default value: 30
-Base Detection Range = 30
+Base Detection Range = 60
 
 ## How much to multiply the increase in detection range granted by Sneak skill level. A mupltiplier of 1 grants 30 additional meters of range at Sneak 100, for a total of 60 meters. A multiplier of 5 would grant 150 additional meters, and so on. 
 # Setting type: Single
 # Default value: 1
-Skill Multiplier = 1
+Skill Multiplier = 2
 
 ## How much stamina to drain when using the skill. By default this is 70, rather large to make the game balanced. Setting this to 0 would cause no drain to occur.
 # Setting type: Single
@@ -33,7 +33,7 @@ Visual Effect = true
 ## Play a shwimsical sound when using the ability. Can be heard by other players.
 # Setting type: Boolean
 # Default value: true
-Audio Effect = true
+Audio Effect = false
 
 ## Show detected enemies on the minimap.
 # Setting type: Boolean
