--- a/BepInEx/config/BepIn.Sarcen.FarmGrid.cfg
+++ b/BepInEx/config/BepIn.Sarcen.FarmGrid.cfg
@@ -11,7 +11,7 @@ plantSpacing = 0.01
 ## Amount of grid sections (on either side of the main axis.)
 # Setting type: Int32
 # Default value: 2
-farmGridSections = 2
+farmGridSections = 5
 
 ## Grid offset from the ground.
 # Setting type: Single
@@ -29,7 +29,7 @@ farmGridColor = CCCCCC33
 ## Use this for Planting Plus:plantObjectMasks = piece,piece_nonsolid,item
 # Setting type: String
 # Default value: piece, piece_nonsolid
-plantObjectMasks = piece, piece_nonsolid
+plantObjectMasks = piece, piece_nonsolid,item
 
 ## Plants that are not actually plants (objects without a plant component), their name and size.
 ## 
@@ -37,5 +37,5 @@ plantObjectMasks = piece, piece_nonsolid
 ## customPlants = RaspberryBush(Clone): 0.5, RaspberryBush: 0.5, BlueberryBush(Clone): 0.5, BlueberryBush: 0.5, Pickable_Mushroom_yellow(Clone): 0.5, Pickable_Mushroom_yellow: 0.5, Pickable_Mushroom_blue(Clone): 0.5, Pickable_Mushroom_blue: 0.5, CloudberryBush: 0.5, CloudberryBush(Clone): 0.5, Pickable_Thistle(Clone): 0.5, Pickable_Thistle: 0.5, Pickable_Dandelion(Clone): 0.5, Pickable_Dandelion: 0.5
 # Setting type: String
 # Default value: 
-customPlants = RaspberryBush(Clone): 0.08, RaspberryBush: 0.08, BlueberryBush(Clone): 0.08, BlueberryBush: 0.08, Pickable_Mushroom_yellow(Clone): 0.08, Pickable_Mushroom_yellow: 0.08, Pickable_Mushroom_blue(Clone): 0.08, Pickable_Mushroom_blue: 0.08, CloudberryBush: 0.08, CloudberryBush(Clone): 0.08, Pickable_Thistle(Clone): 0.08, Pickable_Thistle: 0.08, Pickable_Dandelion(Clone): 0.08, Pickable_Dandelion: 0.08
+customPlants = RaspberryBush(Clone): 0.1, RaspberryBush: 0.1, BlueberryBush(Clone): 0.1, BlueberryBush: 0.1, Pickable_Mushroom_yellow(Clone): 0.1, Pickable_Mushroom_yellow: 0.1, Pickable_Mushroom_blue(Clone): 0.1, Pickable_Mushroom_blue: 0.1, CloudberryBush: 0.1, CloudberryBush(Clone): 0.1, Pickable_Thistle(Clone): 0.1, Pickable_Thistle: 0.1, Pickable_Dandelion(Clone): 0.1, Pickable_Dandelion: 0.1
 
