Atualização Valheim Plus

--- a/BepInEx/config/valheim_plus.cfg
+++ b/BepInEx/config/valheim_plus.cfg
@@ -1,3 +1,13 @@
+[ValheimPlus]
+
+; Change false to true to enable this section
+enabled=true
+
+; Display the Valheim Plus logo in the main menu
+mainMenuLogo=true
+
+; Display the advertisement of our server hosting partner on the server browser menu
+serverBrowserAdvertisement=true
 [AdvancedBuildingMode]
 ; https://docs.unity3d.com/ScriptReference/KeyCode.html <- a list of keycodes
 
@@ -15,6 +25,14 @@ copyObjectRotation=Keypad7
 
 ; Apply the copied object rotation to the currently selected object in ABM
 pasteObjectRotation=Keypad8
+
+; Increases the amount an object rotates and moves.
+; Holding Shift will increase in increments of 10 instead of 1.
+increaseScrollSpeed=KeypadPlus
+
+; Decreases the amount an object rotates and moves.
+; Holding Shift will decrease in increments of 10 instead of 1.
+decreaseScrollSpeed=KeypadMinus
 
 [AdvancedEditingMode]
 
@@ -41,6 +59,13 @@ copyObjectRotation=Keypad7
 ; Apply the copied object rotation to the currently selected object in AEM
 pasteObjectRotation=Keypad8
 
+; Increases the amount an object rotates and moves.
+; Holding Shift will increase in increments of 10 instead of 1.
+increaseScrollSpeed=KeypadPlus
+
+; Decreases the amount an object rotates and moves.
+; Holding Shift will decrease in increments of 10 instead of 1.
+decreaseScrollSpeed=KeypadMinus
 [Beehive]
 
 ; Change false to true to enable this section
@@ -59,16 +84,18 @@ autoDeposit=false
 autoDepositRange=10
 
 ; Display the minutes and seconds until the beehive produces honey on hover
-showDuration=false
+showDuration=true
 
 [Building]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Remove some of the Invalid placement messages, most notably provides the ability to place objects into other objects
 noInvalidPlacementRestriction=false
 
+; Removes the "Mystical forces" building prevention and allows destruction of build objects in those areas with the hammer.
+noMysticalForcesPreventPlacementRestriction=true
 ; Removes the weather damage from rain
 noWeatherDamage=false
 
@@ -77,15 +104,15 @@ maximumPlacementDistance=5
 
 ; The radius, in meters, in which a piece must be to contribute to the comfort level.
 ; Default: 10
-pieceComfortRadius=10
+pieceComfortRadius=50
 
 ; When destroying a building piece, setting this to true will ensure it always drops full resources.
 ; default: false
-alwaysDropResources=false
+alwaysDropResources=true
 
 ; When destroying a building piece, setting this to true will ensure it always drops pieces that the devs have marked as "do not drop".
 ; default: false
-alwaysDropExcludedResources=false
+alwaysDropExcludedResources=true
 
 ; Setting this to true will cause repairing with the hammer to repair in a radius.
 enableAreaRepair=false
@@ -149,7 +176,7 @@ showDuration=false
 
 [FireSource]
 
-; If set to true, all fire sources will stay at max fuel level once filled.
+; Change false to true to enable this section
 ; default: false
 enabled=false
 
@@ -157,23 +184,40 @@ enabled=false
 ; Applies to: wood torches, iron torches, green torches, sconces and brazier
 ; default: false
 onlyTorches=false
+; If set to true, non torch-type fire sources will stay at max fuel level once filled.
+; default: false
+fires=true
+
+; Look for fuel inside nearby chests.
+; default: false
+autoFuel=false
+
+; Ignore private area check.
+; default: true
+ignorePrivateAreaCheck=true
+
+; The range of the chest detection for the auto fuel features.
+; default: 10
+; min: 1
+; max: 50
+autoRange=10
 
 [Food]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Increase or reduce the time that food lasts by %. The value 50 would cause food to run out 50% slower.
 ; Allows for - values to shorten food duration.
 foodDurationMultiplier=0
 
 ; If set to true, this option prevents food degrading over time - in other words, it retains its maximum benefit until it expires.
-disableFoodDegradation=false
+disableFoodDegradation=true
 
 [Smelter]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a smelter
 maximumOre=10
@@ -188,15 +232,22 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside nearby chests instead.
-autoDeposit=false
+autoDeposit=true
 
-; The range of the chest detection for the auto deposit feature. (Maximum is 50)
-autoDepositRange=10
+; Look for fuel inside nearby chests.
+autoFuel=true
+
+; Ignore private area check.
+; default: true
+ignorePrivateAreaCheck=false
+
+; The range of the chest detection for the auto deposit and fuel features. (Maximum is 50)
+autoRange=2
 
 [Furnace]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Maximum amount of ore in a furnace
 maximumOre=10
@@ -211,10 +262,17 @@ coalUsedPerProduct=2
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside nearby chests instead.
-autoDeposit=false
+autoDeposit=true
 
-; The range of the chest detection for the auto deposit feature. (Maximum is 50)
-autoDepositRange=10
+; Look for fuel inside nearby chests.
+autoFuel=true
+
+; Ignore private area check.
+; default: true
+ignorePrivateAreaCheck=false
+
+; The range of the chest detection for the auto deposit and fuel features. (Maximum is 50)
+autoRange=2
 
 [Game]
 
@@ -288,12 +346,12 @@ removeDamageFlash=false
 [Gathering]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Modify the chance to drop resources from resource nodes affected by this category
 ; This only works on resource nodes that do not have guaranteed drops
 ; As example by default scrap piles in dungeons have a 20% chance to drop a item, if you set this option to 200, you will then have a 60% chance to drop iron.
-dropChance=0
+dropChance=100
 
 ; Each of these values increase or reduce the dropped items from destroyed objects with tools (Stones, Trees, Resource nodes, etc.) by %
 ; The value 50 will increase the dropped wood from trees from 10 to 15. The value -50 will reduce the amount of dropped wood from 10 to 5.
@@ -342,7 +400,7 @@ capes=0
 [Kiln]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Maximum amount of wood in a Kiln
 maximumWood=25
@@ -351,22 +409,28 @@ maximumWood=25
 productionSpeed=30
 
 ; Instead of dropping the items, they will be placed inside nearby chests instead.
-autoDeposit=false
+autoDeposit=true
 
-; The range of the chest detection for the auto deposit feature. (Maximum is 50)
-autoDepositRange=10
+; Look for fuel inside nearby chests.
+autoFuel=true
 
+; Ignore private area check.
+; default: true
+ignorePrivateArea=false
+
+; The range of the chest detection for the auto deposit and fuel features. (Maximum is 50)
+autoRange=2
 [Map]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; With this enabled you will receive the same exploration progression as other players on the server
 ; This will also enable the option for the server to sync everyones exploration progression on connecting to the server.
 shareMapProgression=false
 
 ; The radius of the map that you explore when moving
-exploreRadius=100
+exploreRadius=200
 
 ; Prevents you and other people on the server to turn off their map sharing option
 preventPlayerFromTurningOffPublicPosition=false
@@ -375,7 +439,7 @@ preventPlayerFromTurningOffPublicPosition=false
 [Player]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; The base amount of carry weight of your character
 baseMaximumWeight=300
@@ -387,11 +451,11 @@ baseMegingjordBuff=150
 baseAutoPickUpRange=2
 
 ; Disable all types of camera shake
-disableCameraShake=false
+disableCameraShake=true
 
 ; The base unarmed damage multiplied by your skill level.
 ; 120 will result in a maximum of 12 damage when you have a skill level of 10.
-baseUnarmedDamage=120
+baseUnarmedDamage=70
 
 ; When changed to true, you will not be permitted to place a crop within the grow radius of another crop
 cropNotifier=false
@@ -407,13 +471,19 @@ restSecondsPerComfortLevel=60
 deathPenaltyMultiplier=0
 
 ; If set to true, this option will automatically repair your equipment when you interact with the appropriate workbench.
-autoRepair=false
+autoRepair=true
 
 ; Boss buff duration (seconds)
 guardianBuffDuration=300
 
 ; Boss buff cooldown (seconds)
 guardianBuffCooldown=1200
+
+; Disable the Guardian Buff animation
+disableGuardianBuffAnimation=false
+
+; If set to true, when equipping a one-handed weapon, the best shield from your inventory is automatically equipped. (Best is determined by highest block power)
+autoEquipShield=false
 
 
 [Server]
@@ -422,10 +492,10 @@ guardianBuffCooldown=1200
 enabled=true
 
 ; Modify the amount of players on your Server
-maxPlayers=10
+maxPlayers=3
 
 ; Removes the requirement to have a server password
-disableServerPassword=true
+disableServerPassword=false
 
 ; This settings add a version control check to make sure that people that try to join your game or the server you try to join has V+ installed
 enforceMod=true
@@ -433,8 +503,8 @@ enforceMod=true
 ; Changes whether the server will force it's config on clients that connect. Only affects servers.
 serverSyncsConfig=true
 
-; The total amount of data that the server and client can send per second in kilobyte
-dataRate=60
+; If false allows you to keep your own defined hotkeys instead of synchronising the ones declared for the server. Sections need to be enabled in your local configuration to load hotkeys. This is a client side setting and not affected by server settings.
+serverSyncHotkeys=false
 
 
 [Stamina]
@@ -487,6 +557,7 @@ hammer=0
 hoe=0
 cultivator=0
 
+
 [StructuralIntegrity]
 
 ; Change false to true to enable this section
@@ -501,7 +572,7 @@ disableDamageToPlayerStructures=false
 ; Disables any damage from anything to all player built boats
 disableDamageToPlayerBoats=false
 
-; Each of these values reduce the loss of structural integrity by % less. The value 100 would result in disabled structural integrity and allow placement in free air.
+; Each of these values reduce the loss of structural integrity by distance by % less. The value 100 would result in disabled structural integrity and allow placement in free air.
 wood=0
 stone=0
 iron=0
@@ -593,12 +664,12 @@ cartInventoryColumns=8
 cartInventoryRows=3
 
 ; Karve (small boat) inventory number of columns
-; default 8, min 6, max 8
-karveInventoryColumns=8
+; default 2, min 2, max 8
+karveInventoryColumns=2
 
 ; Karve (small boat) inventory number of rows (more than 4 rows will add a scrollbar)
-; default 3, min 3, max 30
-karveInventoryRows=3
+; default 2, min 2, max 30
+karveInventoryRows=2
 
 ; Longboat (large boat) inventory number of columns
 ; default 8, min 6, max 8
@@ -638,10 +709,10 @@ blockRating=0
 [FirstPerson]
 
 ; Change false to true to enable this section
-enabled=false
+enabled=true
 
 ; Hotkey to enable First Person
-hotkey=F10
+hotkey=Home
 
 ; Default Field Of View to use
 defaultFOV=65.0
@@ -651,3 +722,36 @@ raiseFOVHotkey=PageUp
 
 ; Hotkey to lower Field Of View
 lowerFOVHotkey=PageDown
+
+[GridAlignment]
+
+; Change false to true to enable this section
+enabled=false
+
+; Key to enable grid alignment
+align=LeftAlt
+
+; Key to toggle grid alignment
+alignToggle=F7
+
+; Key to change the default alignment
+changeDefaultAlignment=F6
+
+[CraftFromChest]
+
+; Change false to true tu enable this section
+enabled=false
+
+; If in a workbench area, uses it as reference point when scanning for chests
+checkFromWorkbench=true
+
+; Ignore private area check.
+ignorePrivateAreaCheck=true
+
+; The range of the chest detection (min: 1, max: 50)
+; default: 20
+range=20
+
+; Interval in seconds between each nearby chests discovery (min: 1, max: 10)
+; default: 3
+lookupInterval=3			   
