--- a/BepInEx/config/ishid4.mods.betterarchery.cfg
+++ b/BepInEx/config/ishid4.mods.betterarchery.cfg
@@ -36,12 +36,12 @@ Set Arrow Velocity = 10
 ## Change the arrow's gravity. Vanilla is '5'.
 # Setting type: Single
 # Default value: 15
-Set Arrow Gravity = 15
+Set Arrow Gravity = 5
 
 ## Change the aim direction. Vanilla is 'x:0.0, y:0.0, z: 0.0'.
 # Setting type: Vector3
 # Default value: {"x":0.009999999776482582,"y":0.07999999821186066,"z":0.0}
-Set Aim Direction = {"x":0.009999999776482582,"y":0.07999999821186066,"z":0.0}
+Set Aim Direction = {"x":0.0,"y":0.0,"z":0.0}
 
 ## Show sneak damage at top left.
 # Setting type: Boolean
