--- a/BepInEx/config/MK_BetterUI.cfg
+++ b/BepInEx/config/MK_BetterUI.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin BetterUI v1.6.0
+﻿## Settings file was created by plugin BetterUI v1.6.4
 ## Plugin GUID: MK_BetterUI
 
 [HUD]
@@ -16,7 +16,7 @@ hideEnemyHPText = false
 ## Choose how enemy lvl is shown. 0 = Default(stars) | 1 = Prefix before name (Lv. 1) | 2 = Both
 # Setting type: Int32
 # Default value: 1
-enemyLvlStyle = 1
+enemyLvlStyle = 2
 
 ## Select Text size on enemyHud
 # Setting type: Int32
@@ -26,12 +26,12 @@ enemyHudTextSize = 14
 ## How far you will see enemy HP Bar. This is an multiplier, 1 = game default. 2 = 2x default
 # Setting type: Single
 # Default value: 1
-MaxShowDistance = 1
+MaxShowDistance = 2
 
 ## Scale map pins by this factor. Ex. 1.5 makes the 150% of original size.
 # Setting type: Single
 # Default value: 1
-mapPinSize = 1
+mapPinSize = 0.5
 
 [Item]
 
@@ -74,6 +74,16 @@ showCharacterXP = true
 # Default value: true
 ShowXPNotifications = true
 
+## Extend notification with: (xp gained) [current/overall xp]
+# Setting type: Boolean
+# Default value: true
+extendedXPNotification = true
+
+## Edit XP notification font size.
+# Setting type: Int32
+# Default value: 14
+notificationTextSize = 14
+
 ## Toggle the use of custom skills UI
 # Setting type: Boolean
 # Default value: true
@@ -109,7 +119,7 @@ timeLeftStylePlant = 2
 # Default value: 2
 timeLeftStyleCookingStation = 2
 
-## Select how chest emptyness is displayed. 0 = Default | 1 = % | 2 = items / max_room. 
+## Select how chest emptyness is displayed. 0 = Default | 1 = % | 2 = items / max_room. | 3 = free slots 
 # Setting type: Int32
 # Default value: 2
 chestHasRoomStyle = 2
