--- a/BepInEx/config/com.bkeyes93.PlantingPlus.cfg
+++ b/BepInEx/config/com.bkeyes93.PlantingPlus.cfg
@@ -46,52 +46,52 @@ AlternateIcons = true
 ## Enable custom respawn times for pickable resources
 # Setting type: Boolean
 # Default value: true
-EnableCustomRespawnTimes = false
+EnableCustomRespawnTimes = true
 
 ## Enable custom resource amounts for pickable resources
 # Setting type: Boolean
 # Default value: true
-EnableCustomResourceAmounts = false
+EnableCustomResourceAmounts = true
 
 ## Number of raspberries required to place a raspberry bush
 # Setting type: Int32
 # Default value: 10
-RaspberryCost = 10
+RaspberryCost = 5
 
 ## Number of blueberries required to place a blueberry bush
 # Setting type: Int32
 # Default value: 10
-BlueberryCost = 10
+BlueberryCost = 5
 
 ## Number of cloudberries required to place a cloudberry bush
 # Setting type: Int32
 # Default value: 10
-CloudberryCost = 10
+CloudberryCost = 5
 
 ## Number of mushrooms required to place a pickable mushroom spawner
 # Setting type: Int32
 # Default value: 5
-MushroomCost = 5
+MushroomCost = 2
 
 ## Number of yellow mushrooms required to place a pickable yellow mushroom spawner
 # Setting type: Int32
 # Default value: 5
-YellowMushroomCost = 5
+YellowMushroomCost = 2
 
 ## Number of blue mushrooms required to place a pickable blue mushroom spawner
 # Setting type: Int32
 # Default value: 5
-BlueMushroomCost = 5
+BlueMushroomCost = 2
 
 ## Number of thistle required to place a pickable thistle spawner
 # Setting type: Int32
 # Default value: 5
-ThistleCost = 5
+ThistleCost = 1
 
 ## Number of dandelion required to place a pickable dandelion spawner
 # Setting type: Int32
 # Default value: 5
-DandelionCost = 5
+DandelionCost = 1
 
 ## Number of birch cones required to place a birch sapling
 # Setting type: Int32
@@ -111,42 +111,42 @@ AncientCost = 1
 ## Number of minutes it takes for a raspberry bush to respawn berries
 # Setting type: Int32
 # Default value: 300
-RaspberryRespawnTime = 300
+RaspberryRespawnTime = 120
 
 ## Number of minutes it takes for a blueberry bush to respawn berries
 # Setting type: Int32
 # Default value: 300
-BlueberryRespawnTime = 300
+BlueberryRespawnTime = 120
 
 ## Number of minutes it takes for a cloudberry bush to respawn berries
 # Setting type: Int32
 # Default value: 300
-CloudberryRespawnTime = 300
+CloudberryRespawnTime = 120
 
 ## Number of minutes it takes for mushrooms to respawn
 # Setting type: Int32
 # Default value: 240
-MushroomRespawnTime = 240
+MushroomRespawnTime = 120
 
 ## Number of minutes it takes for yellow mushrooms to respawn
 # Setting type: Int32
 # Default value: 240
-YellowMushroomRespawnTime = 240
+YellowMushroomRespawnTime = 90
 
 ## Number of minutes it takes for blue mushrooms to respawn
 # Setting type: Int32
 # Default value: 240
-BlueMushroomRespawnTime = 240
+BlueMushroomRespawnTime = 90
 
 ## Number of minutes it takes for thistle to respawn
 # Setting type: Int32
 # Default value: 240
-ThistleRespawnTime = 240
+ThistleRespawnTime = 60
 
 ## Number of minutes it takes for dandelion to respawn
 # Setting type: Int32
 # Default value: 240
-DandelionRespawnTime = 240
+DandelionRespawnTime = 60
 
 ## Number of seconds it takes for a birch tree to grow from a birch sapling (will take at least 10 seconds after planting to grow)
 # Setting type: Single
