--- a/BepInEx/config/aedenthorn.CraftFromContainers.cfg
+++ b/BepInEx/config/aedenthorn.CraftFromContainers.cfg
@@ -53,7 +53,7 @@ OreDisallowTypes = RoundLog,FineWood
 ## if true, holding down the PreventModKey modifier key will allow this mod's behaviour; if false, holding down the key will prevent it.
 # Setting type: Boolean
 # Default value: false
-SwitchPrevent = false
+SwitchPrevent = true
 
 ## Modifier key to toggle fuel and ore filling behaviour when down. Use https://docs.unity3d.com/Manual/ConventionalGameInput.html
 # Setting type: String
