--- a/BepInEx/config/randyknapp.mods.epicloot.cfg
+++ b/BepInEx/config/randyknapp.mods.epicloot.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Epic Loot v0.6.4
+﻿## Settings file was created by plugin Epic Loot v0.7.6
 ## Plugin GUID: randyknapp.mods.epicloot
 
 [Balance]
@@ -8,6 +8,11 @@
 # Default value: MustKnowRecipe
 # Acceptable values: Unlimited, MustKnowRecipe, MustHaveCrafted
 Item Drop Limits = MustKnowRecipe
+
+## Sets bosses to drop a number of trophies equal to the number of players, similar to the way Wishbone works in vanilla.
+# Setting type: Boolean
+# Default value: true
+Bosses Drop One Trophy Per Player = true
 
 [Crafting UI]
 
@@ -21,6 +26,11 @@ Use Scrolling Craft Description = true
 # Default value: HorizontalSquish
 # Acceptable values: Horizontal, HorizontalSquish, Vertical, Angled
 Crafting Tab Style = HorizontalSquish
+
+## If set to false, hides the items that are equipped or on your hotbar in the Sacrifice items list.
+# Setting type: Boolean
+# Default value: false
+ShowEquippedAndHotbarItemsInSacrificeTab = false
 
 [General]
 
