--- a/BepInEx/config/MK_BetterUI.cfg
+++ b/BepInEx/config/MK_BetterUI.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin BetterUI v1.6.4
+## Settings file was created by plugin BetterUI v1.6.4
 ## Plugin GUID: MK_BetterUI
 
 [HUD]
