--- a/BepInEx/config/Xenofell.RememberIPDamnit.cfg
+++ b/BepInEx/config/Xenofell.RememberIPDamnit.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin RememberIPDamnit v0.2
+## Settings file was created by plugin RememberIPDamnit v0.2
 ## Plugin GUID: Xenofell.RememberIPDamnit
 
 [RememberIPDamnit]
