--- a/BepInEx/config/com.bkeyes93.PlantingPlus.cfg
+++ b/BepInEx/config/com.bkeyes93.PlantingPlus.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin PlantingPlus v1.4.5
+## Settings file was created by plugin PlantingPlus v1.4.5
 ## Plugin GUID: com.bkeyes93.PlantingPlus
 
 [General]
