--- a/BepInEx/config/org.lafchi.plugins.valheim_recycle.cfg
+++ b/BepInEx/config/org.lafchi.plugins.valheim_recycle.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Valheim Recycle v1.1.1
+## Settings file was created by plugin Valheim Recycle v1.1.1
 ## Plugin GUID: org.lafchi.plugins.valheim_recycle
 
 [General]
