--- a/BepInEx/config/aedenthorn.CraftFromContainers.cfg
+++ b/BepInEx/config/aedenthorn.CraftFromContainers.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Craft From Containers v1.9.0
+## Settings file was created by plugin Craft From Containers v1.9.0
 ## Plugin GUID: aedenthorn.CraftFromContainers
 
 [General]
