--- a/BepInEx/config/aedenthorn.InstantMonsterDrop.cfg
+++ b/BepInEx/config/aedenthorn.InstantMonsterDrop.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Instant Monster Drop v0.2.0
+## Settings file was created by plugin Instant Monster Drop v0.2.0
 ## Plugin GUID: aedenthorn.InstantMonsterDrop
 
 [General]
