--- a/BepInEx/config/bakaSpaceman.LastUsedWeapons.cfg
+++ b/BepInEx/config/bakaSpaceman.LastUsedWeapons.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Last Used Weapons v1.1.0.0
+## Settings file was created by plugin Last Used Weapons v1.1.0.0
 ## Plugin GUID: bakaSpaceman.LastUsedWeapons
 
 [General]
