--- a/BepInEx/config/flueno.SmartContainers.cfg
+++ b/BepInEx/config/flueno.SmartContainers.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Smart Containers Mod v1.4.5
+## Settings file was created by plugin Smart Containers Mod v1.4.5
 ## Plugin GUID: flueno.SmartContainers
 
 [General]
