--- a/BepInEx/config/hitbox.fix.cfg
+++ b/BepInEx/config/hitbox.fix.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Hitbox Fix v1.3.0
+## Settings file was created by plugin Hitbox Fix v1.3.0
 ## Plugin GUID: hitbox.fix
 
 [General]
