--- a/BepInEx/config/maximods.valheim.multicraft.cfg
+++ b/BepInEx/config/maximods.valheim.multicraft.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin MultiCraft v0.2.6
+## Settings file was created by plugin MultiCraft v0.2.6
 ## Plugin GUID: maximods.valheim.multicraft
 
 [MultiCraft]
