--- a/BepInEx/config/net.mtnewton.craftingstationrange.cfg
+++ b/BepInEx/config/net.mtnewton.craftingstationrange.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin CraftingStationRange v1.0.3
+## Settings file was created by plugin CraftingStationRange v1.0.3
 ## Plugin GUID: net.mtnewton.craftingstationrange
 
 [CraftingStationRange]
