--- a/BepInEx/config/org.bepinex.plugins.bigger_item_Stack.cfg
+++ b/BepInEx/config/org.bepinex.plugins.bigger_item_Stack.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Bigger Item Stack v0.1.2.0
+## Settings file was created by plugin Bigger Item Stack v0.1.2.0
 ## Plugin GUID: org.bepinex.plugins.bigger_item_Stack
 
 [Multiplier]
