--- a/BepInEx/config/randyknapp.mods.epicloot.cfg
+++ b/BepInEx/config/randyknapp.mods.epicloot.cfg
@@ -1,4 +1,4 @@
-﻿## Settings file was created by plugin Epic Loot v0.7.6
+## Settings file was created by plugin Epic Loot v0.7.6
 ## Plugin GUID: randyknapp.mods.epicloot
 
 [Balance]
