Updates & BuildIt mod

--- a/BepInEx/config/KZ.CreatureSense.cfg
+++ b/BepInEx/config/KZ.CreatureSense.cfg
@@ -18,6 +18,11 @@ Skill Multiplier = 2
 # Default value: 70
 Stamina Drain = 70
 
+## Customize the color of the message with a hex code.
+# Setting type: String
+# Default value: #bbddff
+Message Color = #bbddff
+
 [Features]
 
 ## When using the ability, show a message confirming how many creatures are nearby.
@@ -49,4 +54,9 @@ Additional Zoom = true
 # Setting type: String
 # Default value: 
 Custom Keybind = 
+
+## Set a custom message if you'd like. Example: Detected # enemies. (# will be replaced with the number of dudes detected.
+# Setting type: String
+# Default value: 
+Custom Message = 
 
