--- a/BepInEx/config/flueno.SmartContainers.cfg
+++ b/BepInEx/config/flueno.SmartContainers.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Smart Containers Mod v1.4.5
+## Settings file was created by plugin Smart Containers Mod v1.6.0
 ## Plugin GUID: flueno.SmartContainers
 
 [General]
@@ -72,15 +72,20 @@ itemTypeGroupsEnabled = true
 # Default value: false
 fuzzyGroupingEnabled = false
 
-## If ctrl+shift+click is pressed then items are distributed according to configured groups. If set to only LeftControl - ctrl+click will always trigger 'grouping'. (holding ctrl is mandatory since it's a 'move-stack' ingame key)
+##  Change to 'LeftControl + LeftShift' if you want to trigger grouping with a separate hotkey (ctrl+shift+click)(holding ctrl is mandatory since it's a 'move-stack' ingame key)
 # Setting type: KeyboardShortcut
-# Default value: LeftControl + LeftShift
+# Default value: LeftControl
 groupingKeyModifier = LeftControl + LeftShift
 
 ## Adds to the chest UI button [☼] which creates items-group based on the current items set in the chest.
 # Setting type: Boolean
 # Default value: true
 createGroupBtnEnabled = false
+
+## In case when createGroupBtn clicked and chest already contains some members of one ore more groups - dialog showed with option to merge items & groups into a single group.
+# Setting type: Boolean
+# Default value: true
+mergePromptEnabled = true
 
 ## Adjusts btn position on inventory ui. →x:1.5..-10 ↓y:0.4..10.7  bottom-left: (1.5f, 10.7f) top-right:(-10f, 0.4f) bottom-right:(-10f, 10.7f)
 # Setting type: Vector2
@@ -89,46 +94,62 @@ createGroupBtnPos = {"x":1.5,"y":10.699999809265137}
 
 [ItemGroup]
 
+## Items-group based on item-names list
 # Setting type: String
 # Default value: ruby,coins,amber,amberpearl
 valuables = ruby,coins,amber,amberpearl
 
+## Items-group based on item-names list
 # Setting type: String
 # Default value: copperore,flametalore,ironore,silverore,tinore,ironscrap,blackmetalscrap
 ore = copperore,flametalore,ironore,silverore,tinore,ironscrap,blackmetalscrap
 
+## Items-group based on item-names list
+# Setting type: String
+# Default value: stone,flint,obsidian
+rock = stone,flint,obsidian
+
+## Items-group based on item-names list
 # Setting type: String
 # Default value: copper,bronze,flametal,iron,silver,tin,blackmetal
 ingots = copper,bronze,flametal,iron,silver,tin,blackmetal
 
+## Items-group based on item-names list
 # Setting type: String
-# Default value: wood,finewood,corewood,elderbark
+# Default value: wood,finewood,corewood,elderbark,roundlog
 wood = wood,finewood,corewood,elderbark
 
+## Items-group based on item-names list
 # Setting type: String
 # Default value: Mushroom,MushroomBlue,MushroomYellow,mushroomcommon
 mushrooms = Mushroom,MushroomBlue,MushroomYellow,mushroomcommon
 
+## Items-group based on item-names list
 # Setting type: String
-# Default value: Blueberries,Cloudberry,Raspberry,Honey
+# Default value: Blueberries,raspberries,cloudberries,honey
 berries = Blueberries,Cloudberry,Raspberry,Honey
 
+## Items-group based on item-names list
 # Setting type: String
 # Default value: Carrot,Turnip
 vegetables = Carrot,Turnip
 
+## Items-group based on item-names list
 # Setting type: String
 # Default value: CookedLoxMeat,NeckTailGrilled,MeatCooked,FishCooked,SerpentMeatCooked
 cookedMeat = CookedLoxMeat,NeckTailGrilled,MeatCooked,FishCooked,SerpentMeatCooked
 
+## Items-group based on item-names list
 # Setting type: String
 # Default value: CarrotSoup,Sausages,QueensJam,SerpentStew,TurnipStew,BloodPudding
 food = CarrotSoup,Sausages,QueensJam,SerpentStew,TurnipStew,BloodPudding
 
+## user-added items-group based on item-names list
 # Setting type: String
 # Default value: trophyboar,trophygreydwarf,trophyneck,trophygreydwarfshaman,trophytroll,trophyskeleton,trophydeer,trophylox,trophygoblin
 userGroup1616120416248 = trophyboar,trophygreydwarf,trophyneck,trophygreydwarfshaman,trophytroll,trophyskeleton,trophydeer,trophylox,trophygoblin
 
+## user-added items-group based on item-names list
 # Setting type: String
 # Default value: trophyboar,trophygreydwarf,trophyneck,trophygreydwarfshaman,trophytroll,trophyskeleton,trophydeer,trophylox,trophygoblin
 userGroup1616120418257 = trophyboar,trophygreydwarf,trophyneck,trophygreydwarfshaman,trophytroll,trophyskeleton,trophydeer,trophylox,trophygoblin
@@ -137,14 +158,14 @@ userGroup1616120418257 = trophyboar,trophygreydwarf,trophyneck,trophygreydwarfsh
 
 ## If both item names end with same 'postfix' - they are considered to have same group. I.e. carrotSeeds & turnipSeeds
 # Setting type: String
-# Default value: cone,seeds,pelt,hide
+# Default value: cone,seeds,pelt,hide,berries
 posfixes = cone,seeds,pelt,hide
 
 [PrefixedItemGroups]
 
 ## If both item names start with same 'prefix' - they are considered to have same group. I.e. arrowFire & arrowFlint
 # Setting type: String
-# Default value: trophy,mead,arrow,armor,cape,helmet,atgeir,bow,battleaxe,knife,mace,shield,sledge,spear,sword,tankard,club
+# Default value: trophy,mead,arrow,armor,cape,helmet,atgeir,bow,battleaxe,knife,mace,shield,sledge,spear,sword,tankard,club,mushroom
 prefixes = trophy,mead,arrow,armor,cape,helmet,atgeir,bow,battleaxe,knife,mace,shield,sledge,spear,sword,tankard,club
 
 [Unload]
