Revenant's Revenge mod

--- a/BepInEx/config/Xenofell.RememberIPDamnit.cfg
+++ b/BepInEx/config/Xenofell.RememberIPDamnit.cfg
@@ -5,7 +5,7 @@
 
 # Setting type: String
 # Default value: 
-Address = 187.0.3.236:2456
+Address = bede:2456
 
 # Setting type: String
 # Default value: 
