--- a/BepInEx/config/randyknapp.mods.epicloot.cfg
+++ b/BepInEx/config/randyknapp.mods.epicloot.cfg
@@ -1,5 +1,44 @@
-## Settings file was created by plugin Epic Loot v0.7.6
+## Settings file was created by plugin Epic Loot v0.8.2
 ## Plugin GUID: randyknapp.mods.epicloot
+
+[Abilities]
+
+## Hotkey for Ability Slot 1.
+# Setting type: String
+# Default value: g
+Ability Hotkey 1 = g
+
+## Hotkey for Ability Slot 2.
+# Setting type: String
+# Default value: h
+Ability Hotkey 2 = h
+
+## Hotkey for Ability Slot 3.
+# Setting type: String
+# Default value: j
+Ability Hotkey 3 = j
+
+## The point on the HUD to anchor the ability bar. Changing this also changes the pivot of the ability bar to that corner. For reference: the ability bar size is 208 by 64.
+# Setting type: TextAnchor
+# Default value: LowerLeft
+# Acceptable values: UpperLeft, UpperCenter, UpperRight, MiddleLeft, MiddleCenter, MiddleRight, LowerLeft, LowerCenter, LowerRight
+Ability Bar Anchor = LowerLeft
+
+## The position offset from the Ability Bar Anchor at which to place the ability bar.
+# Setting type: Vector2
+# Default value: {"x":150.0,"y":170.0}
+Ability Bar Position = {"x":150.0,"y":170.0}
+
+## The Ability Bar is a Horizontal Layout Group. This value indicates how the elements inside are aligned. Choices with 'Center' in them will keep the items centered on the bar, even if there are fewer than the maximum allowed. 'Left' will be left aligned, and similar for 'Right'.
+# Setting type: TextAnchor
+# Default value: LowerLeft
+# Acceptable values: UpperLeft, UpperCenter, UpperRight, MiddleLeft, MiddleCenter, MiddleRight, LowerLeft, LowerCenter, LowerRight
+Ability Bar Layout Alignment = LowerLeft
+
+## The number of units between the icons on the ability bar.
+# Setting type: Single
+# Default value: 8
+Ability Bar Icon Spacing = 8
 
 [Balance]
 
@@ -9,10 +48,40 @@
 # Acceptable values: Unlimited, MustKnowRecipe, MustHaveCrafted
 Item Drop Limits = MustKnowRecipe
 
-## Sets bosses to drop a number of trophies equal to the number of players, similar to the way Wishbone works in vanilla.
+## Sets bosses to drop a number of trophies equal to the number of players, similar to the way Wishbone works in vanilla. Optionally set it to only include players within a certain distance, use 'Boss Trophy Drop Player Range' to set the range.
+# Setting type: BossDropMode
+# Default value: OnePerPlayerNearBoss
+# Acceptable values: Default, OnePerPlayerOnServer, OnePerPlayerNearBoss
+Boss Trophy Drop Mode = OnePerPlayerNearBoss
+
+## Sets the range that bosses check when dropping multiple trophies using the OnePerPlayerNearBoss drop mode.
+# Setting type: Single
+# Default value: 100
+Boss Trophy Drop Player Range = 100
+
+## Set to true to enable all the adventure mode features: secret stash, gambling, treasure maps, and bounties. Set to false to disable. This will not actually remove active treasure maps or bounties from your save.
 # Setting type: Boolean
 # Default value: true
+Adventure Mode Enabled = true
+
+## Sets the range that Andvaranaut will locate a treasure chest.
+# Setting type: Int32
+# Default value: 20
+Andvaranaut Range = 20
+
+## The percent chance that a legendary item will be a set item. Min = 0, Max = 1
+# Setting type: Single
+# Default value: 0.15
+Set Item Drop Chance = 0.15
+
 Bosses Drop One Trophy Per Player = true
+
+[Config Sync]
+
+## [Server Only] The configuration is locked and may not be changed by clients once it has been synced from the server. Only valid for server config, will have no effect on clients.
+# Setting type: Boolean
+# Default value: false
+Lock Config = false
 
 [Crafting UI]
 
